[package]
name = "snappy"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.65"
clap = { version = "4.0.10", features = ["derive"] }
dirs = "4.0.0"
regex = "1.6.0"
run_script = "0.10.0"
setenv = "0.1.2"
